test/ui/tests/packages/faulty-package-path/package.stderr
error: could not load the dependency `who`
  --> ${DIRECTORY}/packages/faulty-package-path/package.metadata:10:39
   |
10 |         dependencies: { who: { path: "nowhere" } },
   |                                       ^^^^^^^ 
   |
  note: `${DIRECTORY}/packages/faulty-package-path/nowhere/package.metadata`: No such file or directory (os error 2)

error: aborting due to previous error

