test/ui/tests/packages/faulty-package-path/package.metadata
# TEST fail check

name: "thingy",
version: "0.0.0",

components: [
    {
        type: "library",
        path: "content.lushui",
        dependencies: { who: { path: "nowhere" } },
    }
],
